--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "axios": "^0.27.2",
+    "nodemailer": "^6.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-rough-notation": "^1.0.2"
@@ -21,7 +24,7 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "@types/jest": "^27.0.3",
-    "@types/node": "16",
+    "@types/node": "^16.11.36",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
